Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-app
  template:
    metadata:
      labels:
        app: mern-app
    spec:
      containers:
        - name: backend
          image: your-docker-user/mern-app:latest
          ports:
            - containerPort: 5000
