Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-service
spec:
  selector:
    app: mern-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
